compiler/tests/fa/errors/default_arg_order_fa.salam
// انتظار: خطا۰۶۴
// زبان: فارسی
تابع بد(الف : صحیح = 1, ب : صحیح) : صحیح:
    بازگشت الف + ب
پایان

تابع اصلی:
    چاپ(بد(2, 3))
پایان
